--- a/src/agendar-citas.html
+++ b/src/agendar-citas.html
@@ -73,7 +73,7 @@
           <li>
             <a href="#"
               class="font-medium text-base leading-6 transition-all ease-in-out duration-300 px-3 py-3 border border-transparent hover:border-Accent bg-Accent rounded-full text-white hover:bg-transparent hover:text-Accent">
-              Facturación
+              Agenda tu cita
             </a>
           </li>
           <li>
@@ -160,6 +160,7 @@
     <!-- Calidad end -->
 
     <!-- Estudios start  -->
+    <!-- Estudios start  -->
     <section class="md:py-24 py-12">
       <div class="box-container">
         <div class="flex flex-col gap-6  md:mb-0 mb-6 md:p-6 xl:hidden">
@@ -177,7 +178,7 @@
         <!-- show only desktop view  -->
         <div class="xl:grid grid-cols-12 gap-6 hidden">
           <!-- single item start  -->
-          <div class="col-span-6 flex flex-col gap-6 p-6">
+          <div class="col-span-6 flex flex-col gap-6 py-6">
             <h2 class="font-medium text-7xl tracking-tighter text-Black">Estudios</h2>
             <p class="text-lg leading-[26px] text-Dark max-w-[543px]">En nuestro centro encontrarás una amplia variedad
               de estudios de
@@ -191,9 +192,9 @@
           </div>
           <!-- single item end -->
           <!-- single item start -->
-          <div class="col-span-3 rounded-3xl bg-[#F5F5F5]">
+          <div class="col-span-6 rounded-3xl bg-[#F5F5F5]">
             <div class="">
-              <img src="./images/irem-2.png" alt="resonancia"
+              <img src="./images/resonancia.png" alt="resonancia"
                 class="w-full h-[160px] object-cover object-center rounded-t-3xl">
             </div>
             <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px]">
@@ -220,37 +221,6 @@
             </div>
           </div>
           <!-- single item end -->
-          <!-- single item start -->
-          <div class="col-span-3 rounded-3xl bg-[#F5F5F5]">
-            <div class="">
-              <img src="./images/eco-2.png" alt="resonancia"
-                class="w-full h-[160px] object-cover object-center rounded-t-3xl">
-            </div>
-            <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px]">
-              <div class="flex flex-col gap-6">
-                <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Ecocardiograma Transtorácico
-                </h4>
-                <p class="text-lg leading-[26px] text-Black">Estudio no invasivo con ultrasonido que evalúa el corazón
-                  en tiempo real.</p>
-              </div>
-              <div class="">
-                <a href="" class="flex justify-end items-center text-lg group w-fit ml-auto">
-                  <span
-                    class="border border-Accent p-3 rounded-full text-Accent group-hover:text-White group-hover:bg-Accent transition-all ease-in-out duration-300">Agendar
-                    cita</span>
-                  <span
-                    class="border border-Accent p-3 rounded-full w-12 h-12 flex justify-center items-center text-Accent group-hover:text-White group-hover:bg-Accent  transition-all ease-in-out duration-300">
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M1 11L11 1M11 1H1M11 1V11" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                    </svg>
-                  </span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- single item end -->
-
 
           <!-- single item start -->
           <div class="col-span-6 rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
@@ -262,11 +232,8 @@
               <div class="flex flex-col gap-6">
                 <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Tomografía computarizada (TAC)
                 </h4>
-                <p class="text-lg leading-[26px] text-Black">Estudio rápido y preciso que utiliza rayos X para obtener
-                  imágenes detalladas del cuerpo, identificando lesiones,
-                  tumores, hemorragias y enfermedades pulmonares. Es especialmente útil para examinar órganos como
-                  hígado, riñones y
-                  corazón. A veces requiere medio de contraste para una mejor visibilidad.</p>
+                <p class="text-lg leading-[26px] text-Black">Examen que combina rayos X y computadora para obtener
+                  imágenes claras del interior del cuerpo.</p>
               </div>
               <div class="">
                 <a href="" class="flex justify-end items-center text-lg group w-fit ml-auto">
@@ -344,34 +311,6 @@
           </div>
           <!-- single item end -->
           <!-- single item start -->
-          <div class="col-span-6 rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
-            <div class="">
-              <img src="./images/osea.png" alt="osea" class="w-full h-[160px] object-cover object-center rounded-t-3xl">
-            </div>
-            <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px] h-full justify-between">
-              <div class="flex flex-col gap-6">
-                <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Densitometría ósea</h4>
-                <p class="text-lg leading-[26px] text-Black">Estudio sencillo que mide la fuerza de los huesos y ayuda a
-                  prevenir la osteoporosis.</p>
-              </div>
-              <div class="">
-                <a href="" class="flex justify-end items-center text-lg group w-fit ml-auto">
-                  <span
-                    class="border border-Accent p-3 rounded-full text-Accent group-hover:text-White group-hover:bg-Accent transition-all ease-in-out duration-300">Agendar
-                    cita</span>
-                  <span
-                    class="border border-Accent p-3 rounded-full w-12 h-12 flex justify-center items-center text-Accent group-hover:text-White group-hover:bg-Accent  transition-all ease-in-out duration-300">
-                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M1 11L11 1M11 1H1M11 1V11" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                    </svg>
-                  </span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- single item end -->
-          <!-- single item start -->
           <div class="col-span-3 rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
             <div class="">
               <img src="./images/rayos.png" alt="resonancia"
@@ -429,7 +368,34 @@
             </div>
           </div>
           <!-- single item end -->
-
+          <!-- single item start -->
+          <div class="col-span-6 rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
+            <div class="">
+              <img src="./images/osea.png" alt="osea" class="w-full h-[160px] object-cover object-center rounded-t-3xl">
+            </div>
+            <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px] h-full justify-between">
+              <div class="flex flex-col gap-6">
+                <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Densitometría ósea</h4>
+                <p class="text-lg leading-[26px] text-Black">Estudio sencillo que mide la fuerza de los huesos y ayuda a
+                  prevenir la osteoporosis.</p>
+              </div>
+              <div class="">
+                <a href="" class="flex justify-end items-center text-lg group w-fit ml-auto">
+                  <span
+                    class="border border-Accent p-3 rounded-full text-Accent group-hover:text-White group-hover:bg-Accent transition-all ease-in-out duration-300">Agendar
+                    cita</span>
+                  <span
+                    class="border border-Accent p-3 rounded-full w-12 h-12 flex justify-center items-center text-Accent group-hover:text-White group-hover:bg-Accent  transition-all ease-in-out duration-300">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 11L11 1M11 1H1M11 1V11" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- single item end -->
 
         </div>
         <!-- for mobile slider  -->
@@ -439,12 +405,12 @@
               <!-- Slide Card start-->
               <div class="swiper-slide">
                 <!-- single item start -->
-                <div class="rounded-3xl bg-[#F5F5F5]">
+                <div class="rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
                   <div class="">
-                    <img src="./images/resonancia.png" alt="resonancia"
+                    <img src="./images/irm-mobile.png" alt="resonancia"
                       class="w-full h-[160px] object-cover object-center rounded-t-3xl">
                   </div>
-                  <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px]">
+                  <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px] h-full justify-between">
                     <div class="flex flex-col gap-6">
                       <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Resonancia magnética (IRM)
                       </h4>
@@ -478,17 +444,16 @@
                 <!-- single item start -->
                 <div class="rounded-3xl bg-[#F5F5F5] flex flex-col h-full">
                   <div class="">
-                    <img src="./images/resonancia.png" alt="resonancia"
+                    <img src="./images/tac.jpg" alt="resonancia"
                       class="w-full h-[160px] object-cover object-center rounded-t-3xl">
                   </div>
                   <div class="py-8 px-6 rounded-b-3xl flex flex-col gap-[34px] h-full justify-between">
                     <div class="flex flex-col gap-6">
-                      <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Resonancia magnética (IRM)
+                      <h4 class="font-medium text-[32px] leading-9 tracking-tight text-Black">Tomografía computarizada
+                        (TAC)
                       </h4>
-                      <p class="text-lg leading-[26px] text-Black">Estudio que permite ver con gran detalle los órganos
-                        y
-                        tejidos
-                        internos sin usar radiación.</p>
+                      <p class="text-lg leading-[26px] text-Black">Examen que combina rayos X y computadora para obtener
+                        imágenes claras del interior del cuerpo.</p>
                     </div>
                     <div class="">
                       <a href="" class="flex justify-end items-center text-lg group w-fit ml-auto">
@@ -695,13 +660,15 @@
     <!-- Contacto start  -->
 
     <!-- Compromiso que brinda bienestar start  -->
-    <section class="py-12 md:py-24  px-4">
+    <section class="py-12 md:py-24 md:px-16 px-4">
       <div
-        class="xl:px-16 md:bg-[url(../images/Compromiso-desktop.png)] bg-[url(../images/Compromiso-mobile.png)] bg-cover bg-left-top py-5 rounded-3xl">
-        <div class="box-container">
+        class="xl:px-[42px] px-4 md:bg-[url(../images/Compromiso-desktop.png)] bg-[url(../images/Compromiso-mobile.png)] bg-cover bg-right-top pb-5 md:pt-5 pt-[375px] rounded-3xl">
+        <div class="">
           <div class="p-2 bg-White/50 rounded-3xl max-w-[1015px] ml-auto">
             <div class="flex flex-col gap-9 bg-White/50 md:p-6 rounded-3xl">
-              <h2 class="text-5xl lg:text-7xl font-medium text-Black text-center">Compromiso que brinda bienestar</h2>
+              <h2
+                class="text-5xl leading-[56px] md:leading-[84px] tracking-tighter lg:text-7xl font-medium text-Black text-center">
+                Compromiso que brinda bienestar</h2>
               <div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-6 text-center">
                 <!-- single item start  -->
                 <div class="md:p-[18px] p-3 rounded-[18px] bg-White flex flex-col gap-4">
@@ -830,18 +797,34 @@
       <div class="box-container flex flex-col md:gap-16 gap-6">
         <h2 class="font-medium text-5xl lg:text-7xl tracking-tighter text-Black">Nuestra ubicación</h2>
         <div class="relative w-full min-h-[590px] md:min-h-[498px]">
+
+
+
+          <!-- Tijuana Map -->
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.380105589052!2d-117.02129102434805!3d32.51599367377379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d94838467ec159%3A0xd66874e4a2b025fe!2sImagen%20Radiol%C3%B3gica%20integral%20Tijuana!5e0!3m2!1sen!2sbd!4v1766928023391!5m2!1sen!2sbd"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+            class="absolute top-0 left-0 w-full h-full rounded-3xl" id="tijuana-map">
+          </iframe>
+
+          <!-- Monterrey Map -->
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3596.0091146030964!2d-100.34031252460261!3d25.670992577409013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x866295f10e4b0ebf%3A0x4fc305b69d174702!2sImagen%20Radiol%C3%B3gica%20Integral%20Monterrey!5e0!3m2!1sen!2sbd!4v1766218038443!5m2!1sen!2sbd"
             style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            class="absolute top-0 left-0 w-full h-full rounded-3xl"></iframe>
-          <div class="absolute right-4 bottom-4 bg-White/50 p-2 max-w-[315px] rounded-3xl">
+            class="absolute top-0 left-0 w-full h-full rounded-3xl hidden-item" id="monterrey-map">
+          </iframe>
+
+
+
+          <div class="absolute right-4 bottom-4 bg-White/50 p-2 max-w-[310px] rounded-3xl z-30">
             <div class="bg-White p-[18px] rounded-3xl">
-              <div class="max-w-md mx-auto">
+              <div class="max-w-md mx-auto space-y-4">
 
                 <!-- Accordion Item -->
                 <div class="">
                   <button
-                    class="accordion-btn flex w-full items-center justify-between py-4 text-left font-semibold text-Dark cursor-pointer">
+                    class="accordion-btn flex w-full items-center justify-between py-0 text-left font-semibold text-Dark cursor-pointer"
+                    id="tijuana">
                     <span>Tijuana</span>
 
                     <!-- SVG Arrow -->
@@ -853,7 +836,7 @@
                   </button>
 
                   <div class="accordion-content overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
-                    <ul class="flex flex-col gap-4 py-4">
+                    <ul class="flex flex-col gap-4 pt-4">
                       <li>
                         <a href="tel:+52 (664) 98-00-131" class="flex flex-row gap-2 text-Dark items-start">
                           <img src="./images/phone.svg" alt="">
@@ -889,7 +872,8 @@
                 <!-- Accordion Item -->
                 <div class="">
                   <button
-                    class="accordion-btn flex w-full items-center justify-between py-4 text-left font-semibold text-Dark  cursor-pointer">
+                    class="accordion-btn flex w-full items-center justify-between py-0 text-left font-semibold text-Dark  cursor-pointer"
+                    id="monterrey">
                     <span>Monterrey</span>
 
                     <!-- SVG Arrow -->
@@ -901,19 +885,18 @@
                   </button>
 
                   <div class="accordion-content overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
-                    <ul class="flex flex-col gap-4 py-4">
+                    <ul class="flex flex-col gap-4 pt-4">
                       <li>
                         <a href="tel:+52 (664) 98-00-131" class="flex flex-row gap-2 text-Dark items-start">
                           <img src="./images/phone.svg" alt="">
-                          <span>+52 (664) 98-00-131</span>
+                          <span>+52 (81) 833-345-24</span>
                         </a>
                       </li>
 
                       <li>
                         <a href="" class="flex flex-row gap-2 text-Dark items-start">
                           <img src="./images/ubicanos.svg" alt="">
-                          <span>Calle Santa María 3152 Col. Gabilondo entre Gobernador Lugo y Gobernador Rico C.P. 22044
-                            Tijuana, B.C.</span>
+                          <span>Santos Degollado Sur 736 Col. Obispado <br> Monterrey, Nuevo León</span>
                         </a>
                       </li>
                       <li class="flex flex-row gap-2 text-Dark text-base items-start">
@@ -925,7 +908,7 @@
                           </div>
                           <div class="flex flex-row justify-between gap-1">
                             <span>Sábado</span>
-                            <span>9am - 5pm&nbsp;</span>
+                            <span>8am - 3pm&nbsp;</span>
                           </div>
                         </div>
                       </li>
@@ -1028,6 +1011,8 @@
   <script src="./js/index.js"></script>
   <script>
     new Swiper('.mySwiper', {
+      loop: true,
+      speed: 1200,
       slidesPerView: 1.2,
       spaceBetween: 12,
       breakpoints: {
@@ -1042,7 +1027,21 @@
       }
     });
   </script>
-  <!-- Accordion JS -->
+  <script>
+    const tabs = document.querySelectorAll("button[id]");
+    const maps = {
+      monterrey: document.getElementById("monterrey-map"),
+      tijuana: document.getElementById("tijuana-map"),
+    };
+
+    tabs.forEach(tab => {
+      tab.addEventListener("click", () => {
+        Object.values(maps).forEach(map => map.classList.add("hidden-item"));
+        const target = tab.id + "-map";
+        document.getElementById(target).classList.remove("hidden-item");
+      });
+    });
+  </script>
   <!-- Accordion JS -->
   <script>
     const buttons = document.querySelectorAll(".accordion-btn");
