--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -73,7 +73,7 @@
           <li>
             <a href="#"
               class="font-medium text-base leading-6 transition-all ease-in-out duration-300 px-3 py-3 border border-transparent hover:border-Accent bg-Accent rounded-full text-white hover:bg-transparent hover:text-Accent">
-              Facturación
+              Agenda tu cita
             </a>
           </li>
           <li>
@@ -195,32 +195,32 @@
               <div class="">
                 <ul class="flex flex-wrap flex-row gap-[18px]">
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Trabajo
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Trabajo
                       en
                       equipo</a></li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Empatía</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Empatía</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Calidad</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Calidad</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Innovación</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Innovación</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Confianza</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Confianza</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Ética</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Ética</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Análisis</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Análisis</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium text-xl rounded-full inline-block">Eficiencia</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Eficiencia</a>
                   </li>
                 </ul>
-                <div class="-mr-6">
+                <div class="-mr-6 md:mt-0 mt-5">
                   <img src="./images/valores-bg.svg" alt="valores-bg" class="ml-auto md:w-auto w-[200px] md:mt-0 mt-2">
                 </div>
               </div>
@@ -246,7 +246,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Confianza y seguridad médica</h4>
-              <p class="text-Black text-lg">Somos la alternativa de confianza, seguridad y certeza de los pacientes y
+              <p class="text-Dark text-lg">Somos la alternativa de confianza, seguridad y certeza de los pacientes y
                 médicos.</p>
             </div>
           </div>
@@ -258,7 +258,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Tecnología de última generación</h4>
-              <p class="text-Black text-lg">Contamos con equipamiento de vanguardia y en constante innovación
+              <p class="text-Dark text-lg">Contamos con equipamiento de vanguardia y en constante innovación
                 tecnológica.</p>
             </div>
           </div>
@@ -270,7 +270,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Atención con calidez y experiencia</h4>
-              <p class="text-Black text-lg">Nuestra atención al detalle, espíritu de servicio, empatía y experiencia nos
+              <p class="text-Dark text-lg">Nuestra atención al detalle, espíritu de servicio, empatía y experiencia nos
                 distinguen.</p>
             </div>
           </div>
@@ -282,7 +282,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Responsabilidad social y compromiso local</h4>
-              <p class="text-Black text-lg">Socialmente responsable con las comunidades de la zona para contribuir al
+              <p class="text-Dark text-lg">Socialmente responsable con las comunidades de la zona para contribuir al
                 mejoramiento de su bienestar.</p>
             </div>
           </div>
@@ -294,7 +294,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Comprometidos con la excelencia</h4>
-              <p class="text-Black text-lg">Nos comprometemos en mejorar la calidad y el servicio hacia nuestros
+              <p class="text-Dark text-lg">Nos comprometemos en mejorar la calidad y el servicio hacia nuestros
                 pacientes.</p>
             </div>
           </div>
@@ -306,7 +306,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Espacios cómodos y acogedores</h4>
-              <p class="text-Black text-lg">Cálidas y cómodas instalaciones para contribuir a un ambiente positivo y
+              <p class="text-Dark text-lg">Cálidas y cómodas instalaciones para contribuir a un ambiente positivo y
                 agradable para el paciente.</p>
             </div>
           </div>
@@ -318,7 +318,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Apoyo integral para médicos y pacientes</h4>
-              <p class="text-Black text-lg">Apoyamos al médico en su interpretación diagnóstica y al paciente en su
+              <p class="text-Dark text-lg">Apoyamos al médico en su interpretación diagnóstica y al paciente en su
                 entendimiento para el mejoramiento de su
                 bienestar.</p>
             </div>
@@ -331,7 +331,7 @@
             </div>
             <div class="flex flex-col gap-1">
               <h4 class="text-Black font-medium text-xl">Resultados rápidos y accesibles</h4>
-              <p class="text-Black text-lg">Contamos con diversa formas de entrega de resultados para la comodidad del
+              <p class="text-Dark text-lg">Contamos con diversa formas de entrega de resultados para la comodidad del
                 paciente: Correo electrónico o entrega
                 inmediata.</p>
             </div>
