--- a/src/Promociones-del-mes.html
+++ b/src/Promociones-del-mes.html
@@ -73,7 +73,7 @@
           <li>
             <a href="#"
               class="font-medium text-base leading-6 transition-all ease-in-out duration-300 px-3 py-3 border border-transparent hover:border-Accent bg-Accent rounded-full text-white hover:bg-transparent hover:text-Accent">
-              Facturación
+              Agenda tu cita
             </a>
           </li>
           <li>
@@ -164,14 +164,13 @@
                     tecnología de vanguardia.</p>
                 </div>
                 <div class="">
-                  <div class="">
 
+                  <div class="tab-container">
                     <!-- Tabs Header -->
                     <div class="flex flex-row">
                       <button class="tab-btn active" data-tab="tab-1">Paquetes</button>
                       <button class="tab-btn" data-tab="tab-2">Estudios individuales</button>
                     </div>
-
                     <!-- Content Wrapper -->
                     <div class="overflow-x-auto" style="touch-action: pan-x;">
                       <div
@@ -301,6 +300,7 @@
               </div>
             </div>
           </div>
+
           <!-- ================= SLIDE  ================= -->
           <div class="swiper-slide relative lg:pb-0 sm:pb-10 pb-14">
             <!-- show only desktop version  -->
@@ -309,24 +309,24 @@
             <img src="./images/octubre-mobile.png" alt="hero" class="mx-auto lg:hidden w-full">
             <!-- ================= CONTENT ================= -->
             <div
-              class="mx-auto w-full max-w-[1190px] lg:px-8 md:px-1.5  md:absolute sm:bottom-4 bottom-[1%] 3xl:left-[calc(50%-660px)] lg:left-[calc(50%-525px)] sm:left-0 left-0 md:mt-0 sm:-mt-[46%] xs:-mt-[80%] -mt-[106%]">
+              class="mx-auto w-full max-w-[1190px] lg:px-8 md:px-1.5  md:absolute lg:bottom-4 sm:bottom-16 bottom-[1%] 3xl:left-[calc(50%-660px)] lg:left-[calc(50%-525px)] sm:left-0 left-0 md:mt-0 sm:-mt-[46%] xs:-mt-[80%] -mt-[106%]">
 
               <div class="md:space-y-6 space-y-14">
                 <div class=" flex flex-col gap-4 max-w-[906px] md:px-0 px-4">
-                  <h1 class="text-White text-5xl lg:text-7xl tracking-tighter from-Medium">Octubre rosa: detección
+                  <h1 class="text-White text-5xl lg:text-7xl tracking-tighter from-Medium">Octubre Pink: detección
                     oportuna del cáncer de mama</h1>
-                  <p class="text-White text-xl font-medium">Este mes de Octubre, haz de la prevención tu prioridad con
+                  <p class="text-White text-xl font-medium"> New text Este mes de Octubre, haz de la prevención tu
+                    prioridad con
                     tecnología de vanguardia.</p>
                 </div>
                 <div class="">
-                  <div class="">
 
+                  <div class="tab-container">
                     <!-- Tabs Header -->
                     <div class="flex flex-row">
                       <button class="tab-btn active" data-tab="tab-1">Paquetes</button>
                       <button class="tab-btn" data-tab="tab-2">Estudios individuales</button>
                     </div>
-
                     <!-- Content Wrapper -->
                     <div class="overflow-x-auto" style="touch-action: pan-x;">
                       <div
@@ -456,6 +456,7 @@
               </div>
             </div>
           </div>
+
 
 
         </div>
@@ -488,7 +489,7 @@
 
     <!-- services item start  -->
     <section class="py-12 md:py-24">
-      <div class="box-container grid grid-cols-1 md:grid-cols-3">
+      <div class="box-container grid grid-cols-1 md:grid-cols-3 gap-9">
         <!-- single item start  -->
         <div class="text-center flex flex-col justify-center gap-4">
           <img src="./images/phone-red.svg" alt="img" class="mx-auto">
@@ -651,7 +652,97 @@
                 </div>
                 <div class="w-full h-full">
                   <img src="./images/slider-image.png" alt="listo"
-                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-l-none rounded-l-3xl">
+                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-b-none rounded-b-3xl">
+                </div>
+              </div>
+            </div>
+            <!-- Slide Card end-->
+
+            <!-- Slide Card start-->
+            <div class="swiper-slide">
+              <div class="bg-Light rounded-3xl grid grid-cols-1 lg:grid-cols-2">
+                <div class="py-6 px-4 xl:p-16 flex flex-col gap-5 text-center lg:text-start">
+                  <h2 class="font-medium text-3xl sm:text-5xl lg:text-7xl tracking-tighter text-Black">
+                    Tomografías y resonancias
+                    precio
+                    especial</h2>
+                  <p class="text-lg font-normal text-Dark">Dolor neque nisi at risus cursus pulvinar eget. Non sed
+                    fermentum
+                    sit euismod.</p>
+                  <ul class="flex flex-col sm:flex-row gap-3 mt-3 lg:justify-start justify-center">
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/facebook-red.svg" alt="facebook">
+                        <span>Facebook</span>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/telephone-red.svg" alt="telephone">
+                        <span>Telefono</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/instagram-red.svg" alt="instagram">
+                        <span>Instagram</span>
+                      </a>
+                    </li>
+
+                  </ul>
+                </div>
+                <div class="w-full h-full">
+                  <img src="./images/slider-image.png" alt="listo"
+                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-b-none rounded-b-3xl">
+                </div>
+              </div>
+            </div>
+            <!-- Slide Card end-->
+
+            <!-- Slide Card start-->
+            <div class="swiper-slide">
+              <div class="bg-Light rounded-3xl grid grid-cols-1 lg:grid-cols-2">
+                <div class="py-6 px-4 xl:p-16 flex flex-col gap-5 text-center lg:text-start">
+                  <h2 class="font-medium text-3xl sm:text-5xl lg:text-7xl tracking-tighter text-Black">
+                    Tomografías y resonancias
+                    precio
+                    especial</h2>
+                  <p class="text-lg font-normal text-Dark">Dolor neque nisi at risus cursus pulvinar eget. Non sed
+                    fermentum
+                    sit euismod.</p>
+                  <ul class="flex flex-col sm:flex-row gap-3 mt-3 lg:justify-start justify-center">
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/facebook-red.svg" alt="facebook">
+                        <span>Facebook</span>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/telephone-red.svg" alt="telephone">
+                        <span>Telefono</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href=""
+                        class="flex flex-row gap-2.5 text-Accent border border-Accent text-lg font-medium rounded-full px-4 py-3 justify-center">
+                        <img src="./images/instagram-red.svg" alt="instagram">
+                        <span>Instagram</span>
+                      </a>
+                    </li>
+
+                  </ul>
+                </div>
+                <div class="w-full h-full">
+                  <img src="./images/slider-image.png" alt="listo"
+                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-b-none rounded-b-3xl">
                 </div>
               </div>
             </div>
@@ -695,7 +786,7 @@
                 </div>
                 <div class="w-full h-full">
                   <img src="./images/slider-image.png" alt="listo"
-                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-l-none rounded-l-3xl">
+                    class="w-full h-full object-cover object-center lg:rounded-r-3xl lg:rounded-b-none rounded-b-3xl">
                 </div>
               </div>
             </div>
@@ -796,6 +887,12 @@
   <script src="./js/index.js"></script>
   <script>
     new Swiper('.mySwiper', {
+      loop: true,
+      speed: 1200,
+      autoplay: {
+        delay: 5000,
+        disableOnInteraction: false,
+      },
       slidesPerView: 1.2,
       spaceBetween: 24,
       breakpoints: {
@@ -836,21 +933,24 @@
     });
   </script>
   <script>
-    const tabs = document.querySelectorAll(".tab-btn");
-    const panels = document.querySelectorAll(".tab-panel");
+    document.querySelectorAll(".tab-container").forEach(container => {
+      const tabs = container.querySelectorAll(".tab-btn");
+      const panels = container.querySelectorAll(".tab-panel");
 
-    tabs.forEach(tab => {
-      tab.addEventListener("click", () => {
-        const target = tab.dataset.tab;
+      tabs.forEach(tab => {
+        tab.addEventListener("click", () => {
+          const target = tab.dataset.tab;
 
-        tabs.forEach(t => t.classList.remove("active"));
-        panels.forEach(p => p.classList.remove("active"));
+          tabs.forEach(t => t.classList.remove("active"));
+          panels.forEach(p => p.classList.remove("active"));
 
-        tab.classList.add("active");
-        document.getElementById(target).classList.add("active");
+          tab.classList.add("active");
+          container.querySelector("#" + target).classList.add("active");
+        });
       });
     });
   </script>
+
 </body>
 
 </html>
