--- a/src/consulta-tus-resultados.html
+++ b/src/consulta-tus-resultados.html
@@ -73,7 +73,7 @@
           <li>
             <a href="#"
               class="font-medium text-base leading-6 transition-all ease-in-out duration-300 px-3 py-3 border border-transparent hover:border-Accent bg-Accent rounded-full text-white hover:bg-transparent hover:text-Accent">
-              Facturación
+              Agenda tu cita
             </a>
           </li>
           <li>
@@ -178,8 +178,8 @@
             <li>
               <a href=""
                 class="flex flex-row justify-between items-start bg-Light lg:bg-White rounded-3xl py-4 pl-2 pr-6 hover:bg-white/50 hover:backdrop:backdrop-blur-3xl transition-all ease-in-out duration-300 md:gap-4 gap-1.5">
-                <div class="flex flex-row gap-2.5 items-center">
-                  <div class="flex w-10 h-10 justify-center items-center bg-Light rounded-full">
+                <div class="flex flex-row gap-2.5 items-start">
+                  <div class="flex min-w-10 h-10 justify-center items-center bg-Light rounded-full">
                     <img src="./images/area.svg" alt="area">
                   </div>
                   <div class="text-Black font-medium text-lg w-full max-w-[225px]">
@@ -197,8 +197,8 @@
             <li>
               <a href=""
                 class="flex flex-row justify-between items-start bg-Light lg:bg-White rounded-3xl py-4 pl-2 pr-6 hover:bg-white/50 hover:backdrop:backdrop-blur-3xl transition-all ease-in-out duration-300 md:gap-4 gap-1.5">
-                <div class="flex flex-row gap-2.5 items-center">
-                  <div class="flex w-10 h-10 justify-center items-center bg-Light rounded-full">
+                <div class="flex flex-row gap-2.5 items-start">
+                  <div class="flex min-w-10 h-10 justify-center items-center bg-Light rounded-full">
                     <img src="./images/instituciones.svg" alt="instituciones">
                   </div>
                   <div class="text-Black font-medium text-lg w-full max-w-[225px]">
@@ -216,8 +216,8 @@
             <li>
               <a href=""
                 class="flex flex-row justify-between items-start bg-Light lg:bg-White rounded-3xl py-4 pl-2 pr-6 hover:bg-white/50 hover:backdrop:backdrop-blur-3xl transition-all ease-in-out duration-300 md:gap-4 gap-1.5">
-                <div class="flex flex-row gap-2.5 items-center">
-                  <div class="flex w-10 h-10 justify-center items-center bg-Light rounded-full">
+                <div class="flex flex-row gap-2.5 items-start">
+                  <div class="flex min-w-10 h-10 justify-center items-center bg-Light rounded-full">
                     <img src="./images/directorio.svg" alt="directorio">
                   </div>
                   <div class="text-Black font-medium text-lg w-full max-w-[225px]">
@@ -235,8 +235,8 @@
             <li>
               <a href=""
                 class="flex flex-row justify-between items-start bg-Light lg:bg-White rounded-3xl py-4 pl-2 pr-6 hover:bg-white/50 hover:backdrop:backdrop-blur-3xl transition-all ease-in-out duration-300 md:gap-4 gap-1.5">
-                <div class="flex flex-row gap-2.5 items-center">
-                  <div class="flex w-10 h-10 justify-center items-center bg-Light rounded-full">
+                <div class="flex flex-row gap-2.5 items-start">
+                  <div class="flex min-w-10 h-10 justify-center items-center bg-Light rounded-full">
                     <img src="./images/consulta.svg" alt="consulta">
                   </div>
                   <div class="text-Black font-medium text-lg w-full max-w-[225px]">
